--- a/Curly/Curly-Info.plist
+++ b/Curly/Curly-Info.plist
@@ -36,7 +36,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>network_tools.icns</string>
+	<string>curly.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>mamba.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
