--- a/Curly/Curly-Info.plist
+++ b/Curly/Curly-Info.plist
@@ -38,7 +38,7 @@
 	<key>CFBundleIconFile</key>
 	<string>icon</string>
 	<key>CFBundleIdentifier</key>
-	<string>mamba.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>net.mambasystems.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
